[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/UserInterface/HowPlay/Exit.png" type="Texture" id=1]
[ext_resource path="res://assets/UserInterface/HowPlay/Header3.png" type="Texture" id=2]
[ext_resource path="res://assets/UserInterface/HowPlay/ExitPaper.png" type="Texture" id=3]
[ext_resource path="res://assets/UserInterface/Button/LanjutBtn.png" type="Texture" id=4]
[ext_resource path="res://assets/UserInterface/Button/KembaliBtn.png" type="Texture" id=5]
[ext_resource path="res://assets/UserInterface/Button/MenuUtamaBtn.png" type="Texture" id=6]
[ext_resource path="res://src/UserInterface/HowToPlay/HowToPlay.gd" type="Script" id=7]
[ext_resource path="res://assets/Sounds/ButtonClick.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "change_hint"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Trans:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.3, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/PaperHint:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Header:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_tutor"
} ]
}

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Header:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/PaperHint:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="HowToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaperHint" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -401.589
margin_top = -125.0
margin_right = -102.589
margin_bottom = 162.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trans" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.8 )
margin_left = 110.309
margin_top = 100.358
margin_right = 345.309
margin_bottom = 154.358
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -100.448
margin_right = 400.0
margin_bottom = -46.4475
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="HBoxContainer"]
margin_right = 331.0
margin_bottom = 54.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )

[node name="MainMenu" type="TextureButton" parent="HBoxContainer"]
margin_left = 335.0
margin_right = 667.0
margin_bottom = 54.0
size_flags_horizontal = 7
texture_normal = ExtResource( 6 )

[node name="Next" type="TextureButton" parent="HBoxContainer"]
margin_left = 671.0
margin_right = 800.0
margin_bottom = 54.0
texture_normal = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/change_hint = SubResource( 1 )
anims/start = SubResource( 2 )

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]
